refactor: TableGroupServiceTest 생성자 사용하도록 변경